Fixed Parallax on mobile

--- a/static/stylesheets/partials/_variables.scss
+++ b/static/stylesheets/partials/_variables.scss
@@ -10,4 +10,4 @@ $dark: #828282;
 $font: 'Abhaya Libre', Arial, Helvetica, sans-serif;
 $spaced: 'Asap', monospace;
 $margin: 0 auto;
-$breakpoint: 1020px;
+$breakpoint: 1024px;
