--- a/static/stylesheets/partials/main.scss
+++ b/static/stylesheets/partials/main.scss
@@ -6,10 +6,17 @@ nav{
     margin: auto;
     width: 100%;
     height: 100%;
-    background: url("../../media/mountain-background.jpg") no-repeat;
+    background: url("../../media/mountain-background.jpg") no-repeat center;
     background-attachment: fixed;
-    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
+}
+@media (max-width: $breakpoint){
+    nav{
+        background-attachment: scroll;
+    }
 }
 #navigation{
     position: fixed;
